[package]
edition = "2018"
name = "rotonda-macros"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0.86", features = ["proc-macro", "full", "parsing", "printing"] }
quote = "1.0.15"
