[package]
edition = "2021"
name = "rotonda-macros"
categories = ["network-programming"]
description = "Procedural macros for the rotonda-store prefix store"
homepage = "https://nlnetlabs.nl/projects/routing/rotonda/"
keywords = ["routing", "bgp"]
license = "BSD-3-Clause"
version = "0.2.0-pre.4"

[lib]
proc-macro = true

[dependencies]
syn = {version = "^2", features = ["proc-macro", "full", "parsing", "printing"] }
quote = "^1"
